# ai-therapist

./: README.md  api_server.py  app.js  index.html  live_cli_agent.py  main.py  pyproject.toml  requirements.txt  style.css
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
llm/: __init__.py  llm.py
stt/: __init__.py
tts/: __init__.py
