[project]
name = "ai-therapist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[openai]>=1.1.4",
    "numpy>=2.2.6",
    "ollama>=0.5.1",
    "pyaudio>=0.2.14",
    "pyobjc>=11.1",
    "pyobjc-framework-avfoundation>=11.1",
    "pyobjc-framework-cocoa>=11.1",
    "pywhispercpp>=1.3.2",
    "requests>=2.32.4",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]
