[project]
name = "ai-therapist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "ollama>=0.5.1",
    "pyaudio>=0.2.14",
    "pywhispercpp>=1.3.3",
    "requests>=2.32.4",
    "sounddevice>=0.5.2",
]
