[project]
name = "ai-therapist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "numpy==1.22.0",
    "ollama>=0.5.1",
    "pip>=25.1.1",
    "pyaudio>=0.2.14",
    "pywhispercpp>=1.3.3",
    "requests>=2.32.4",
    "scipy==1.11.4",
    "setuptools>=80.9.0",
    "sounddevice>=0.5.2",
    "webrtcvad-wheels>=2.0.14",
    "wheel>=0.45.1",
]
